--- a/style.css
+++ b/style.css
@@ -28,10 +28,9 @@ p {
 /* Contenedor general */
 .wrapper {
     padding: 1rem 1rem;
-    width: 375px; 
-   
+    width: 375px;   
 }
-
+/* Header */
 .header {
     width: 343px;
     height: 96px;
@@ -44,4 +43,36 @@ p {
     width: 2rem;
 }
 
-.ncrypted-textarea 
+/* Area de ingreso de texto para ser encriptado */
+.encrypted-textarea > textarea {
+    width: 100%;
+    height: 3rem;
+    border:none;
+    margin: 3.3rem 0 15.51rem ;
+    font-size: 2rem;
+    line-height: 3rem;
+    cursor: text;
+    font-family: var(--main-font);
+}
+
+::placeholder {
+    color: var(--dark-blue-400);
+}
+
+/* mensaje de condicion */
+.condition-sms {
+    display: flex;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.condition-icon {
+    width: 1rem;
+    height: 1rem;
+}
+
+.condition-description {
+    font-size: 0.75rem;
+    align-items: center;
+    color: var(--gray);
+}
