--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ p {
     width: 100%;
     height: 3rem;
     border:none;
-    margin: 3.3rem 0 15.51rem ;
+    margin: 3.3rem 0 10.51rem ;
     font-size: 2rem;
     line-height: 3rem;
     cursor: text;
@@ -75,4 +75,55 @@ p {
     font-size: 0.75rem;
     align-items: center;
     color: var(--gray);
+}
+
+.button {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    width: 100%;
+    margin-bottom: 4rem;
+    
+}
+
+.button > button {
+    font-size: 1.12rem;
+    height: 4.18rem;
+    border-radius: 2rem;
+    border: var(--dark-blue-400) solid 1.5px;
+    cursor: pointer;
+}
+
+.main-button {
+    background-color: var(--dark-blue-400);
+    color: var(--white);
+}
+
+.decrypten-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 186px;
+    background-color: var(--white);
+    border-radius: 2rem;
+    margin-bottom: 2rem;
+}
+
+.warning-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 32px;
+}
+
+.warning-des, 
+.warning-title {
+    background-color: var(--white);
+    text-align: center;
+    padding: 0.5rem;
+}
+
+footer p {
+    text-align: center;
 }
