--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     padding: 0;
     box-sizing: border-box;
     background-color: var(--ligth-blue);
+   
 }
 
 /* Formateando titulos y parrafos */
@@ -48,8 +49,8 @@ p {
     width: 100%;
     height: 3rem;
     border:none;
-    margin: 3.3rem 0 10.51rem ;
-    font-size: 2rem;
+    margin: 3.3rem 0 9rem ;
+    font-size: 1.75rem;
     line-height: 3rem;
     cursor: text;
     font-family: var(--main-font);
@@ -80,7 +81,7 @@ p {
 .button {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 2rem;
     width: 100%;
     margin-bottom: 4rem;
     
@@ -122,6 +123,7 @@ p {
     background-color: var(--white);
     text-align: center;
     padding: 0.5rem;
+    color: #343A40;
 }
 
 footer p {
