--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ p {
 /* Contenedor general */
 .wrapper {
     padding: 1rem 1rem;
-    width: 375px;   
+    width: 375px;
+    height: auto;   
 }
 /* Header */
 .header {
@@ -82,7 +83,7 @@ p {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    width: 100%;
+    width: 343px;
     margin-bottom: 4rem;
     
 }
@@ -105,7 +106,7 @@ p {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 186px;
+    height: auto;
     background-color: var(--white);
     border-radius: 2rem;
     margin-bottom: 2rem;
@@ -116,6 +117,7 @@ p {
     flex-direction: column;
     align-items: center;
     margin: 32px;
+    height: auto;
 }
 
 .warning-des, 
@@ -124,6 +126,18 @@ p {
     text-align: center;
     padding: 0.5rem;
     color: #343A40;
+}
+
+.copy-button {
+    /* display: none; */
+    font-size: 1.12rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 100%;
+    border-radius: 2rem;
+    border: var(--white) solid 1.5px;
+    cursor: pointer;
 }
 
 footer p {
