--- a/style.css
+++ b/style.css
@@ -106,9 +106,25 @@ footer {
 
 }
 
+.contenedor-mensaje > h2{
+    width: auto;
+    padding: 20px;
+    margin-top: 550px;
+    background-color: var(--white);
+    font-size: 32px;
+    color: #343A40;
+    text-align: center;
+}
+.contenedor-mensaje > p {
+    background-color: var(--white);
+    padding-left: 2px;
+    text-align: center;
+    text-decoration: underline;
+}
+
 .mensaje {
     width: 346px;
-    height: 740px;
+    height: 550px;
     /* margin-top: 32px; */
     /* margin-bottom: 32px; */
     border: none;
@@ -129,7 +145,7 @@ footer {
 }
 
 .btn-copiar {
-    display:none;
+    /* display:none; */
     width: 328px;
     height: 67px;
     border-radius: 24px;
@@ -138,5 +154,5 @@ footer {
     background-color: var(--white);
     color: var(--dark-blue-400);
     border: var(--dark-blue-400) 1px solid;
-    margin-top: 755px;
+    margin-top: 48px;
 }
