--- a/style.css
+++ b/style.css
@@ -81,7 +81,9 @@ footer {
     background-color: var(--dark-blue-400);
     color: var(--white);
     border: var(--dark-blue-400) 1px solid;
+    cursor: pointer;
 }
+
 
 .btn-desencriptar {
     width: 328px;
@@ -91,7 +93,8 @@ footer {
     font-size: 16px;
     background-color: var(--gray);
     color: var(--dark-blue-400);
-    border: var(--dark-blue-400) 1px solid;;
+    border: var(--dark-blue-400) 1px solid;
+    cursor: pointer;
 }
 
 .contenedor-mensaje {
@@ -145,7 +148,7 @@ footer {
 }
 
 .btn-copiar {
-    /* display:none; */
+    display:none;
     width: 328px;
     height: 67px;
     border-radius: 24px;
@@ -155,4 +158,5 @@ footer {
     color: var(--dark-blue-400);
     border: var(--dark-blue-400) 1px solid;
     margin-top: 48px;
+    cursor: pointer;
 }
